# cerebro

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  README_EN.md  main.py  pyproject.toml  ui_components.py  workspace_manager.py
cerebro/: __init__.py  __main__.py  app.py  handler.py  parser.py  registry.py  runner.py  throttle.py  ui.py  workspace.py
